--- a/indexx.html
+++ b/indexx.html
@@ -9,16 +9,21 @@
   <title>Frontend Mentor | QR code component</title>
   <style>
     body{
+        background-image: url(favicon32x32.png);
         background-color:hsl(212, 45%, 89%);
         margin: 0;
         padding: 0;
         font-size: 15px;
         font-family: Arial, Helvetica, sans-serif;
-        font-w
     }
 
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { 
+        font-size: 11px;
+        text-align: center;
+    }
+    .attribution a { 
+        color: hsl(228, 45%, 44%);
+    }
 
     section{
         display: block;
@@ -60,7 +65,7 @@
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
             Coded by <a href="#">Oladipsyn</a>.
-          </div>
+        </div>
     </section>
     
  
